[package]
name = "chewing"
description = "The Chewing (酷音) intelligent Zhuyin input method."
documentation = "https://docs.rs/chewing"
license = "LGPL-2.1-or-later"
version = "0.9.1"
rust-version = "1.83.0"
edition = "2021"

include = [
    "src/**/*.rs",
    "src/**/*.asn1",
    "data/*",
    "Cargo.toml",
    "AUTHORS",
    "COPYING",
    "NEWS",
]

[dependencies]
der = { version = "0.7.7", features = ["std"] }
directories = "5.0.0"
log = { workspace = true }
rusqlite = { version = ">= 0.28.0", optional = true }

[dev-dependencies]
tempfile = { workspace = true }

[features]
default = []
sqlite = ["dep:rusqlite"]

[workspace]
members = ["capi", "fuzzer", "tests/testhelper", "tools"]
resolver = "2"

[workspace.dependencies]
log = "0.4.21"
tempfile = "3.10.1"

[profile.release]
lto = true
opt-level = 3
panic = "abort"
codegen-units = 1
debug = true

[package.metadata.vet]
store = { path = "./vet" }

[package.metadata.docs.rs]
features = ["sqlite"]
# rustdoc-args = ["-Zunstable-options", "--sort-modules-by-appearance"]
